Fixed Footer on iphone & android (issue #83)

--- a/src/sass/Footer.scss
+++ b/src/sass/Footer.scss
@@ -16,7 +16,7 @@
     justify-content: flex-end;
     align-items: flex-start;
     & > div {
-      padding-bottom: 10px;
+      height: 25px;
     }
     .right, .copyright {
       align-self: flex-end;
